--- a/src/styles.css
+++ b/src/styles.css
@@ -12,3 +12,6 @@ body { margin: 0; font-family: "IRANSans", "Helvetica Neue", sans-serif; }
 .custom-container .mat-dialog-container {
     border-radius: 15px !important;
  }
+ .rtl{
+    direction: rtl;
+ }
