design buttons in current work day

--- a/src/app/components/dialog-ask-mode/dialog-ask-mode.component.html
+++ b/src/app/components/dialog-ask-mode/dialog-ask-mode.component.html
@@ -6,7 +6,6 @@
 
     <!-- <div> <i class="fas fa-star"></i> <i class="fal fa-face-smile"></i></div> -->
 
-
     <div class="d-flex flex-row justify-content-center">
         <mat-button-toggle-group name="fontStyle">
             <mat-button-toggle class="cry"><i class="fal fa-face-sad-sweat"></i></mat-button-toggle>
@@ -21,11 +20,12 @@
         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
             placeholder="هرچه میخواهد دل تنگت بگو ..."></textarea>
     </div>
-
     <div class="ask-start-work d-flex flex-row align-items-center justify-content-between">
         <span>میخوای شروع به کار کنی ؟</span>
         <div class="d-flex flex-row btns">
-            <button class="border iransans yes" mat-raised-button>آره</button>
+            <button class="border iransans yes" mat-raised-button>
+                <a href="/current-day"> آره</a>
+            </button>
             <button class="border iransans" mat-raised-button>نه هنوز</button>
         </div>
     </div>
