--- a/src/app/components/current-work-day/current-work-day.component.css
+++ b/src/app/components/current-work-day/current-work-day.component.css
@@ -1,36 +1,87 @@
-.user-name{
+.user-name {
     color: #4895d6;
     font-size: 16px;
     font-weight: bold;
 }
-.work-time{
+
+.work-time {
     color: #61cf4f;
     font-size: 16px;
 }
-.rest-time{
+
+.rest-time {
     color: #fc8f8f;
     font-size: 16px;
 }
-.work , .rest{
-border-radius: 50px;
-/* padding: 5px; */
-width: 100px;
-height: 50px;
-font-size: 16px;
+
+.work,
+.rest {
+    border-radius: 50px;
+    /* padding: 5px; */
+    width: 100px;
+    height: 50px;
+    font-size: 16px;
 }
-.work:hover{
+
+.work:hover {
     background-color: #ecf8ea;
 }
-.rest:hover{
+
+.rest:hover {
     background-color: #ffe3e3;
 }
-.work:focus{
+
+.work:focus {
     box-shadow: 0 0 12px #61cf4f;
     border: 1px solid #61cf4f;
     background-color: #ecf8ea;
 }
-.rest:focus{
+
+.rest:focus {
     box-shadow: 0 0 12px #fc8f8f;
     border: 1px solid #fc8f8f;
-    background-color: #ffe3e3; 
+    background-color: #ffe3e3;
+}
+
+.progress {
+    width: 850px;
+    position: relative;
+}
+
+::ng-deep.mat-progress-bar-fill::after {
+    background-color: #9f9f9f;
+
+}
+
+::ng-deep .mat-progress-bar-buffer {
+    background: #eaeaea;
+}
+
+.point-fill {
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background-color: #9f9f9f;
+    align-items: end;
+}
+.point-empty{
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background-color:white;
+    border: 1px solid #9f9f9f;
+    align-items: start;
+}
+.mat-progress-bar{
+    bottom: 5px;
+}
+.timebar{
+    width: 887px;
+
+}
+.bar{
+    height: 25px;
+}
+.time-bar-container{
+    font-size: 12px;
 }
