try to change color of progress bar for different condition

--- a/src/app/components/current-work-day/current-work-day.component.css
+++ b/src/app/components/current-work-day/current-work-day.component.css
@@ -104,3 +104,10 @@
     font-size: 20px;
     border-radius: 7px;
 }
+
+.warn{
+    background-color: orange;
+}
+.dan{
+    background-color: red;
+}
