set api for start page

--- a/src/app/components/current-work-day/current-work-day.component.css
+++ b/src/app/components/current-work-day/current-work-day.component.css
@@ -45,7 +45,8 @@
 
 .progress {
     width: 850px;
-    position: relative;
+    height: 5px;
+    /* position: relative; */
 }
 
 ::ng-deep.mat-progress-bar-fill::after {
