--- a/src/app/components/current-work-day/current-work-day.component.html
+++ b/src/app/components/current-work-day/current-work-day.component.html
@@ -1,4 +1,23 @@
 <div class="d-flex flex-column">
+
+    <div class="d-flex flex-row justify-content-center">
+
+        <!-- <div class="progress ltr my-4">
+
+            <div class="progress-bar" role="progressbar" style="width: 15%" aria-valuenow="15" aria-valuemin="0"
+                aria-valuemax="100"></div>
+
+            <div class="progress-bar bg-success" role="progressbar" style="width: 30%" aria-valuenow="30"
+                aria-valuemin="0" aria-valuemax="100"></div>
+
+            <div class="progress-bar bg-info" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0"
+                aria-valuemax="100"></div>
+
+        </div> -->
+        
+
+    </div>
+    <!-- ========================= -->
     <div class="user-name d-flex flex-row justify-content-end iransans p-4">سارا صنعت دوست</div>
 
 
@@ -18,13 +37,14 @@
             <div class="d-flex flex-row align-items-end ltr bar">
                 <div class="point-fill"></div>
                 <mat-progress-bar class="progress mt-5 d-flex" mode="determinate" [value]="progressbarValue" dir="ltr">
+
                 </mat-progress-bar>
                 <div class="point-empty"></div>
             </div>
         </div>
     </div>
 
-    <footer class="rtl d-flex flex-row justify-content-center ">
+    <footer class="rtl d-flex flex-row justify-content-center">
         <button (click)="onOpenDialog()" class=" iransans leave" mat-raised-button>دارم میرم</button>
     </footer>
 </div>
