--- a/src/app/components/dialog-ask-mode/start/start.component.html
+++ b/src/app/components/dialog-ask-mode/start/start.component.html
@@ -7,10 +7,7 @@
         <!-- *ngFor="let employee of employeeList$ | async" -->
         <select class="custom-select border selected" >
             <!-- <option *ngFor="let employee of employees"selected> {{employee.firstName}}  هستم; {{employee.lastName}}</option> -->
-            <option *ngFor="let employee of employeeList | async">{{employee.name}}</option>
-            <!-- <option>مهسا خاتمی</option>
-            <option>مصطفی عقیلی</option>
-            <option>مهدی ترابی</option> -->
+            <option [value]="employee" *ngFor="let employee of employeeList | async">{{employee.name}}</option>
         </select>
     </div>
 
