add switch buttons in admin panel

--- a/src/app/components/current-work-day/current-work-day.component.html
+++ b/src/app/components/current-work-day/current-work-day.component.html
@@ -22,9 +22,17 @@
                 <div class="point-empty"></div>
             </div>
         </div>
+        <div class="mt-4 me-3">
+            <app-admin-panel></app-admin-panel>
+        </div>
     </div>
 
+
     <footer class="rtl d-flex flex-row justify-content-center ">
-        <button (click)="onOpenDialog()" class=" iransans leave" mat-raised-button>دارم میرم</button>
+        <!-- <label class="switch">
+            <input type="checkbox" checked>
+            <span class="slider round"></span>
+          </label> -->
+        <!-- <button (click)="onOpenDialog()" class=" iransans leave" mat-raised-button>دارم میرم</button> -->
     </footer>
 </div>
