--- a/src/app/components/current-work-day/current-work-day.component.html
+++ b/src/app/components/current-work-day/current-work-day.component.html
@@ -1,27 +1,51 @@
 <div class="d-flex flex-column">
     <div class="user-name d-flex flex-row justify-content-end iransans p-4">سارا صنعت دوست</div>
-
-
     <div class="container-timer">
         <div class="d-flex flex-row justify-content-center align-items-center iransans">
             <span class="work-time ms-3">02:25</span>
-            <button (click)="startTimer(60)" class="work iransans ms-3" mat-stroked-button>در حال کار</button>
-            <button (click)="rest = true" class="rest iransans ms-3" mat-stroked-button>استراحت</button>
+            <button (click)="startGreen()" class="work iransans ms-3" mat-stroked-button>در حال کار</button>
+            <button (click)="startRed()" class="rest iransans ms-3" mat-stroked-button>استراحت</button>
             <span class="rest-time ms-3">00:18</span>
         </div>
 
-        <div class="time-bar-container d-flex flex-column justify-content-end ltr align-items-center iransans mt-5">
-            <div class="timebar d-flex flex-row ">
+
+        <div class="time-bar-container d-flex flex-column justify-content-end  align-items-center iransans mt-5">
+            <div class="timebar d-flex flex-row">
                 <span class="col d-flex flex-row justify-content-start">24:00</span>
                 <span class="col d-flex flex-row justify-content-end">00:00</span>
             </div>
+
             <div class="d-flex flex-row align-items-end ltr bar">
                 <div class="point-fill"></div>
                 <mat-progress-bar class="progress mt-5 d-flex" mode="determinate" [value]="progressbarValue" dir="ltr">
                 </mat-progress-bar>
                 <div class="point-empty"></div>
             </div>
+
+
+
+            <div class="d-flex flex-row align-items-end ltr bar">
+                <div class="point-fill"></div>
+                <div class="p ltr">
+                    <div [style.width.%]="totalPercent" class="grey ltr"></div>
+                    <div [style.margin-left.%]="totalPercent" class="green ltr"></div>
+                </div>
+                <div class="point-empty"></div>
+            </div>
+
+
+
+            <!-- <div class="d-flex flex-row align-items-end ltr bar">
+                <div class="point-fill"></div>
+                <mat-progress-bar class="s mt-5 d-flex" mode="determinate" [value]="progressbarValue" dir="ltr">
+                    <mat-progress-bar class="s1" mode="determinate" value="40"></mat-progress-bar>
+                </mat-progress-bar>
+                <div class="point-empty"></div>
+            </div> -->
+
         </div>
+        <!-- <app-progress-bar (startWork)="onStart($event)"></app-progress-bar> -->
+
         <div class="mt-4 me-3">
             <app-admin-panel></app-admin-panel>
         </div>
@@ -33,6 +57,6 @@
             <input type="checkbox" checked>
             <span class="slider round"></span>
           </label> -->
-        <!-- <button (click)="onOpenDialog()" class=" iransans leave" mat-raised-button>دارم میرم</button> -->
+        <button (click)="onOpenDialog()" class=" iransans leave" mat-raised-button>دارم میرم</button>
     </footer>
 </div>
