--- a/src/app/components/user-progress-bar/section/section.component.html
+++ b/src/app/components/user-progress-bar/section/section.component.html
@@ -4,12 +4,11 @@
 {{color}}
 {{localStorage.getItem('localkey')}} -->
 
-<div class="d-flex flex-row progress-bar">
+<span class="d-flex flex-row progress-bar">
     <div class="d-flex flex-row justify-content-center light-grey"></div>
-    
-        <ng-template #unitsection></ng-template>
-    
-</div>
+
+    <ng-template #unitsection></ng-template>
+</span>
 
 
 
