adding green section by click on work btn

--- a/src/app/components/user-progress-bar/user-progress-bar.component.html
+++ b/src/app/components/user-progress-bar/user-progress-bar.component.html
@@ -1,3 +1,4 @@
 <div class="bar-container">
+    <button id="taskbar" (click)="createComponent()" style="visibility: hidden;" class="work iransans ms-3" mat-stroked-button>در حال کار</button>
     <ng-template #section></ng-template>
 </div>
