--- a/src/app/components/current-work-day/current-work-day.component.html
+++ b/src/app/components/current-work-day/current-work-day.component.html
@@ -27,7 +27,7 @@
             </div> -->
 
           
-            <div class="d-flex flex-row align-items-end ltr bar">
+            <!-- <div class="d-flex flex-row align-items-end ltr bar">
                 <div class="point-fill"></div>
                 <div class="p ltr">
                     
@@ -37,7 +37,7 @@
                 </div>
                 <div class="point-empty"></div>
 
-            </div>
+            </div> -->
 
 
 
