--- a/src/app/components/current-work-day/current-work-day.component.html
+++ b/src/app/components/current-work-day/current-work-day.component.html
@@ -3,8 +3,8 @@
     <div class="container-timer">
         <div class="d-flex flex-row justify-content-center align-items-center iransans">
             <span class="work-time ms-3">02:25</span>
-            <button (click)="onStartWork()" class="work iransans ms-3" mat-stroked-button>در حال کار</button>
-            <button class="rest iransans ms-3" mat-stroked-button>استراحت</button>
+            <button [disabled]="disabledWork" (click)="onStartWork()" class="work iransans ms-3" mat-stroked-button>در حال کار</button>
+            <button  class="rest iransans ms-3" mat-stroked-button>استراحت</button>
             <span class="rest-time ms-3">00:18</span>
         </div>
 
