--- a/src/app/components/user-progress-bar/user-progress-bar.component.html
+++ b/src/app/components/user-progress-bar/user-progress-bar.component.html
@@ -1,4 +1,6 @@
 <div class="bar-container">
-    <button id="taskbar" (click)="createComponent()" style="visibility: hidden;" class="work iransans ms-3" mat-stroked-button>در حال کار</button>
+    <button id="task1" (click)="createComponent()" style="visibility: hidden;"></button>
+    <button id="task2" (click)="createComponent()" style="visibility: hidden;"></button>
+
     <ng-template #section></ng-template>
 </div>
