set index for units

--- a/src/app/components/current-work-day/current-work-day.component.html
+++ b/src/app/components/current-work-day/current-work-day.component.html
@@ -4,7 +4,7 @@
         <div class="d-flex flex-row justify-content-center align-items-center iransans">
             <span class="work-time ms-3">02:25</span>
             <button [disabled]="disabledWork" (click)="onStartWork()" class="work iransans ms-3" mat-stroked-button>در حال کار</button>
-            <button (click)="onStartRest()"  class="rest iransans ms-3" mat-stroked-button>استراحت</button>
+            <button [disabled]="disabledRest" (click)="onStartRest()"  class="rest iransans ms-3" mat-stroked-button>استراحت</button>
             <span class="rest-time ms-3">00:18</span>
         </div>
 
@@ -14,43 +14,9 @@
                 <span class="col d-flex flex-row justify-content-start">24:00</span>
                 <span class="col d-flex flex-row justify-content-end">00:00</span>
             </div>
-
-
             <app-user-progress-bar></app-user-progress-bar>
-
-
-            <!-- <div class="d-flex flex-row align-items-end ltr bar">
-                <div class="point-fill"></div>
-                <mat-progress-bar class="progress mt-5 d-flex" mode="determinate" [value]="progressbarValue" dir="ltr">
-                </mat-progress-bar>
-                <div class="point-empty"></div>
-            </div> -->
-
-          
-            <!-- <div class="d-flex flex-row align-items-end ltr bar">
-                <div class="point-fill"></div>
-                <div class="p ltr">
-                    
-                    <div [style.width.%]="totalPercent" class="grey ltr"></div>
-                    <div [style.margin-left.%]="totalPercent" class="green ltr"></div>
-                    
-                </div>
-                <div class="point-empty"></div>
-
-            </div> -->
-
-
-
-            <!-- <div class="d-flex flex-row align-items-end ltr bar">
-                <div class="point-fill"></div>
-                <mat-progress-bar class="s mt-5 d-flex" mode="determinate" [value]="progressbarValue" dir="ltr">
-                    <mat-progress-bar class="s1" mode="determinate" value="40"></mat-progress-bar>
-                </mat-progress-bar>
-                <div class="point-empty"></div>
-            </div> -->
-
         </div>
-        <!-- <app-progress-bar (startWork)="onStart($event)"></app-progress-bar> -->
+        
 
         <div class="mt-4 me-3">
             <app-admin-panel></app-admin-panel>
@@ -59,10 +25,6 @@
 
 
     <footer class="rtl d-flex flex-row justify-content-center ">
-        <!-- <label class="switch">
-            <input type="checkbox" checked>
-            <span class="slider round"></span>
-          </label> -->
         <button (click)="onOpenDialog()" class=" iransans leave" mat-raised-button>دارم میرم</button>
     </footer>
 </div>
