--- a/src/app/components/user-progress-bar/section/section.component.css
+++ b/src/app/components/user-progress-bar/section/section.component.css
@@ -2,9 +2,11 @@
     background-color: #eaeaea ;
     height: 5px;
     width: 850px;
-    /* position: absolute; */
+   /* position: absolute; */
 }
 .progress-bar{
     height: 10px;
-    width: 850px;
+    
+    /* width: 850px; */
+    /* position: relative; */
 }
