--- a/src/app/components/user-progress-bar/user-progress-bar.component.css
+++ b/src/app/components/user-progress-bar/user-progress-bar.component.css
@@ -1,6 +1,12 @@
 .bar-container{
-    /* width: 1000px; */
-    height: 100px;
-    /* background-color: cornflowerblue; */
+    width: 850px;
+    height: 5px;
     position: relative;
+    direction: ltr;
+    background-color: #eaeaea ;
+}
+.light-grey{
+    
+    height: 5px;
+    direction: ltr;
 }
