--- a/src/app/components/current-work-day/current-work-day.component.html
+++ b/src/app/components/current-work-day/current-work-day.component.html
@@ -11,8 +11,10 @@
 
         <div class="time-bar-container d-flex flex-column justify-content-end  align-items-center iransans mt-5">
             <div class="timebar d-flex flex-row">
-                <span class="col d-flex flex-row justify-content-start">24:00</span>
-                <span class="col d-flex flex-row justify-content-end">00:00</span>
+                <!-- <span class="d-flex flex-row w-100">salam{{showTime.workTimes}}</span> -->
+
+                <!-- <span class="col d-flex flex-row justify-content-start">24:00</span>
+                <span class="col d-flex flex-row justify-content-end">00:00</span> -->
             </div>
             <app-user-progress-bar></app-user-progress-bar>
         </div>
