--- a/src/app/components/user-progress-bar/section/section.component.html
+++ b/src/app/components/user-progress-bar/section/section.component.html
@@ -1,16 +1,9 @@
 <!-- <p [ngStyle]="{color: color}">section works!</p> -->
 
-<!-- {{index}}
-{{color}}
-{{localStorage.getItem('localkey')}} -->
+<!-- {{localStorage.getItem('localkey')}}  -->
 
 <span class="d-flex flex-row progress-bar">
    
     
     <ng-template #unitsection></ng-template>
 </span>
-
-
-
-
-<!-- <ng-template style="display: inline-flex" #unitsection></ng-template> -->
