--- a/src/app/components/dialog-ask-mode/dialog-ask-mode.component.html
+++ b/src/app/components/dialog-ask-mode/dialog-ask-mode.component.html
@@ -23,8 +23,8 @@
     <div class="ask-start-work d-flex flex-row align-items-center justify-content-between">
         <span>میخوای شروع به کار کنی ؟</span>
         <div class="d-flex flex-row btns">
-            <button class="border iransans yes" mat-raised-button>
-                <a href="/current-day"> آره</a>
+            <button mat-dialog-close (click) = "onStartWork()" class="border iransans yes" mat-raised-button>
+                <a routerLink="/current-day"> آره</a>
             </button>
             <button class="border iransans" mat-raised-button>نه هنوز</button>
         </div>
