build gray section after click 'yes' in ask mode dialog

--- a/src/app/components/dialog-ask-mode/dialog-ask-mode.component.html
+++ b/src/app/components/dialog-ask-mode/dialog-ask-mode.component.html
@@ -23,7 +23,7 @@
     <div class="ask-start-work d-flex flex-row align-items-center justify-content-between">
         <span>میخوای شروع به کار کنی ؟</span>
         <div class="d-flex flex-row btns">
-            <button mat-dialog-close (click) = "onStartWork()" class="border iransans yes" mat-raised-button>
+            <button mat-dialog-close  class="border iransans yes" mat-raised-button>
                 <a routerLink="/current-day"> آره</a>
             </button>
             <button class="border iransans" mat-raised-button>نه هنوز</button>
