--- a/src/app/components/dialog-leaving-work/dialog-leaving-work.component.html
+++ b/src/app/components/dialog-leaving-work/dialog-leaving-work.component.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="d-flex flex-row justify-content-center mt-4">
-        <button mat-dialog-close class="go iransans" mat-raised-button>به سلامت </button>
+        <button mat-dialog-close (click)="onFinishWork()" class="go iransans" mat-raised-button>به سلامت </button>
         
     </div>
 </div>
