--- a/src/app/components/user-progress-bar/user-progress-bar.component.html
+++ b/src/app/components/user-progress-bar/user-progress-bar.component.html
@@ -1,7 +1,9 @@
 <div class="d-flex flex-row bar-container">
     
-    <button id="task1" (click)="createSectionComponent()" style="visibility: hidden; position: absolute; float: left; display: inline;"></button>
-    <button id="task2" (click)="createSectionComponent()" style="visibility: hidden; position: absolute; float: left; display: inline;"></button>
+    <button id="task1" (click)="createSectionComponent()" style="visibility: hidden; position: absolute; "></button>
+    <button id="task2" (click)="createSectionComponent()" style="visibility: hidden; position: absolute; "></button>
+    <button id="task3" (click)="createSectionComponent()" style="visibility: hidden; position: absolute; "></button>
+
     <div class="d-flex flex-row justify-content-center light-grey"></div>
     <ng-template #section></ng-template>
 </div>
